image sizing fixed to not be distorted

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ p {
   	text-align: center;
 }
 .pics{
-  height: 400px;
-  width: 600px;
+  height: 750px;
+  width: 1000px;
   margin-left: auto;
   margin-right: auto;	
 }
